<resources>
    <string name="app_name">Breather</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="name">Enter your name</string>
    <string name="birthdate">Enter your birthdate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continue_str">Continue</string>
    <string name="title_activity_main_logged_in">MainActivityLoggedIn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="export">Export</string>
    <string name="measure">Measure</string>
    <string name="resources">Resources</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="success_connection">Device successfully connected!</string>
    <string name="retrieve">Retrieve measurements</string>
    <string name="patience">Please remain patient while we retrieve your results</string>
    <string name="measurement">Measurement</string>
    <string name="remarks">Remarks/Self Care</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>