<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_measure">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.takeabreather.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_measure"
        android:name="com.example.takeabreather.ui.measure.MeasureFragment"
        android:label="@string/measure"
        tools:layout="@layout/fragment_measure" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.takeabreather.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>